--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c81f78910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6d767dc10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c8225d110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c8225d310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6d762e150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6d762e350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c827f9a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c827f9c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6d7bdea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6d7bdec50&gt;]</pre>
 </div>
 
 </div>
