--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f667465cfd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdaa813a9d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6674937190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6674937310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdaa7e20550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdaa7e20750&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6674ee5a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6674ee5b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdaa83c4dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdaa83c4fd0&gt;]</pre>
 </div>
 
 </div>
