--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb32af0df10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07f5010750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb32b1fe110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb32b1fe310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07f55cf050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07f55cf250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb32b79a9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb32b79abd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07f5b6c9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07f5b6cbd0&gt;]</pre>
 </div>
 
 </div>
