--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f446ab5e510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbd018f00d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f446ab00ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f446ab30110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd019479d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd015d1550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f446b0cc7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f446b0cc9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd01bbfed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd01b81d90&gt;]</pre>
 </div>
 
 </div>
