--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8238c25090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9ce17c890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f82388ea110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f82388ea310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9ce4502d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9ce4504d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8238ed1810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8238e9bb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9cea00b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9cea00d90&gt;]</pre>
 </div>
 
 </div>
