--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6f45bc7a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f086a2b7c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f4616e110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f4616e310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f086a23cf10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f086a26f190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f4671fa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f4671fc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f086a80e810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f086a80ea50&gt;]</pre>
 </div>
 
 </div>
