--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f086a2b7c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb67a3267d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f086a23cf10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f086a26f190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb67a2ee050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb67a2ee250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f086a80e810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f086a80ea50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb67a88a9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb67a88abd0&gt;]</pre>
 </div>
 
 </div>
