--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba4d0aee50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8228ba0e10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba4d04bfd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba4d073210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8227d87150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8227d87350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba4d60f8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba4d60fad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8228322a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8228322c50&gt;]</pre>
 </div>
 
 </div>
