--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc39022ea10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ca55bda90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3901f9050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc3901f9250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ca52a4210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ca52a4410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc390790950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc390790b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ca5841ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ca5841cd0&gt;]</pre>
 </div>
 
 </div>
