--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2099bd3f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a2e72d890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2099ebc110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2099ebc310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a2e6f0110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a2e6f0310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f209a468990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f209a468b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a2ec8ca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a2ec8cc90&gt;]</pre>
 </div>
 
 </div>
