--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f845ae17290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fde6e0f2bd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f845aaf9990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f845ab0e0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde6e0bb090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde6e0bb2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f845b09f590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f845b0ac990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde6e658a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde6e658c50&gt;]</pre>
 </div>
 
 </div>
