--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa91170e850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f27570ff150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9116b8f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9116d81d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2756dd4250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2756dd4450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa911c85890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa911c85a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f275737eb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f275737ed90&gt;]</pre>
 </div>
 
 </div>
