--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2dbf51a2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6583c0f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dbf7f80d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2dbf7f82d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6586f1390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6586a3210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dbfda3a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2dbfda3c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa658c8c710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa658c55b90&gt;]</pre>
 </div>
 
 </div>
