--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff42c1bdad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f292d2b8710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff42c77c110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff42c77c310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f292cf8e1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f292cf8e3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff42cd19a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff42cd19c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f292d53db50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f292d53dd50&gt;]</pre>
 </div>
 
 </div>
