--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f292d2b8710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71f5c8a390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f292cf8e1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f292cf8e3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71f6272250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71f6272450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f292d53db50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f292d53dd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71f6811bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71f6811dd0&gt;]</pre>
 </div>
 
 </div>
