--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48af22d190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f185ddc7150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48aef04150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48aef04350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f185dddbcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f185da92310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48af4afa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48af4afc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f185e079490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f185e042c50&gt;]</pre>
 </div>
 
 </div>
