--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c8ab3bb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f044ce36150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c8ab10090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c8ab10290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f044cb0e150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f044cb0e350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c8b0b9990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c8b0b9b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f044d0aba50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f044d0abc50&gt;]</pre>
 </div>
 
 </div>
