--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f82b2c9fb50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdb00319d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f82b2cc1f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f82b2cf7190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdb0315150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdb0315350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f82b3297890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f82b3297a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdb08b3ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdb08b3cd0&gt;]</pre>
 </div>
 
 </div>
