--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f548798ab90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b33492150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5487638050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f548765b350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b33172150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b33172350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5487c01910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5487c0cc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b33708b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b33708d10&gt;]</pre>
 </div>
 
 </div>
