--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcce28d59d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcc10b8d910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcce288c1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcce288c3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc10e59250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcc10e59450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcce2e37b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcce2e37d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc1140cb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcc1140cd10&gt;]</pre>
 </div>
 
 </div>
