--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcea9fa10d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ce4d80e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fceaa55e150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fceaa55e350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ce3dc0210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ce3dc0410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fceaaafba90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fceaaafbc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ce4373b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ce4373d10&gt;]</pre>
 </div>
 
 </div>
