--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ce4d80e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe14221be50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ce3dc0210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ce3dc0410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe142509210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe142509410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ce4373b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ce4373d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe142abbad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe142abbcd0&gt;]</pre>
 </div>
 
 </div>
